corrijo error en it.json

--- a/languages/it.json
+++ b/languages/it.json
@@ -34,7 +34,7 @@
       "design-title": "Design"
     },
     "projects": {
-      "fourth-project-title": "Cose de Fare",
+      "fourth-project-title": "Cose da Fare",
       "fourth-project-description": "Sito Web per aggiungere un elenco di attività, in cui è possibile aggiungere l'attività desiderata da completare, contrassegnarla come completata o eliminarla dall'elenco.",
       "third-project-title": "Calcolatrice 2",
       "third-project-description": "Calcolatrice virtuale progettata in HTML, CSS, Js e React, per eseguire calcoli matematici di base.",
