--- a/languages/en.json
+++ b/languages/en.json
@@ -36,8 +36,8 @@
   "projects": {
     "fourth-project-title": "To Do List",
     "fourth-project-description": "Website to add a list of tasks, where one can add the desired task to be completed, mark it as completed or delete it from the list.",
-    "third-project-title": "Calculator 2",
-    "third-project-description": "Virtual calculator designed in HTML, CSS, Js and React for basic mathematical calculations.",
+    "third-project-title": "Shop Sport",
+    "third-project-description": "Basic website for purchasing sports products. Realizing the shopping cart functionality with JavaScript.",
     "second-project-description": "Website for selling products themed around Funko Pop figures. Designed with HTML, CSS, and Js, and developed a backend with NodeJs using dependencies like express, session, validator, dotenv, ejs, cookie-parser, multer, mysql2, and sequelize.",
     "first-project-title": "Calculator",
     "first-project-description": "Virtual calculator designed in HTML, CSS, and Js for basic mathematical calculations."
