--- a/languages/es.json
+++ b/languages/es.json
@@ -36,8 +36,8 @@
   "projects": {
     "fourth-project-title": "Lista de Tareas",
     "fourth-project-description": "Sitio web para poder añadir una lista de tareas, donde uno puede agregar la tarea a realizar que desee, marcarla como completada o eliminarla del listado.",
-    "third-project-title": "Calculadora 2",
-    "third-project-description": "Calculadora virtual diseñada en HTML, CSS, Js y React, para realizar cálculos matemáticos básicos.",
+    "third-project-title": "Shop Sport",
+    "third-project-description": "Sitio web básico de compra de productos deportivos. Realizando con JavaScript la funcionalidad del carrito de compras.",
     "second-project-description": "Sitio web de venta de productos con temática de los muñecos Funko Pop. Diseñado con HTML, CSS y Js, y desarrollado un backend con NodeJs con dependencias express, session, validator, dotenv, ejs, cookie-parser, multer, mysql2 y sequelize.",
     "first-project-title": "Calculadora",
     "first-project-description": "Calculadora virtual diseñada en HTML, CSS y Js, para realizar cálculos matemáticos básicos."
